--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By Mahii -->
+<!-- Created By ♕ ✌ 𝓶ⓐＨιⒾ𝐈  ✌ ♕ -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -20,7 +20,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">ASHPAK SHAIKH<span></span></a></div>
+            <div class="logo"><a href="#">ﾑ丂んｱﾑズ<span></span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -57,7 +57,7 @@
                     <img src="images/profile-1.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Ashpak and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm 𝓐𝓼𝓱𝓹𝓪𝓴 and I'm a <span class="typing-2"></span></div>
                     <p>Strong in design and integration with intuitive problem-solving skills. Proficient in JAVA, C#, PYTHON, JAVASCRIPT, and SQL. Passionate about implementing and launching new projects. Ability to translate business requirements into technical solutions. Looking to start the career as an entry-level software engineer with a reputed firm driven by technology..</p>
                     <a href="https://drive.google.com/file/d/1A-9yKj9mEF1UNckNmIZbSiRQZVNVN2SJ/view?usp=drivesdk">Download CV</a>
                 </div>
@@ -209,7 +209,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="http://www.therealmahi.cf/">Mahii</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>Created By <a href="http://www.therealmahi.cf/"> ♛ⓐ丂ᕼᵖᵃⓀ♕</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
