--- a/index.html
+++ b/index.html
@@ -191,8 +191,11 @@
 <!--Floating WhatsApp javascript-->  
 <script type="text/javascript" src="floating-wpp.min.js"></script>
 
-                        </div>
-                    </form>
+ <body>
+<!--Div where the WhatsApp will be rendered-->
+  <div id="WAButton"></div>
+</body>
+                
                 </div>
             </div>
         </div>
