--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<!-- Created By ♕ ✌ 𝓶ⓐＨιⒾ𝐈  ✌ ♕ -->
+<!-- Created By ♛ⓐ丂ᕼᵖᵃⓀ♕ -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <!-- Favicon -->
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <title>♛ıllıllı คŞhpคk ıllıllı♛</title>
     <link rel="stylesheet" href="style.css">
@@ -16,9 +17,7 @@
 
 </head>
 <body>
-    <div class="scroll-up-btn">
-        <i class="fas fa-angle-up"></i>
-    </div>
+    
     <nav class="navbar">
         <div class="max-width">
             <div class="logo"><a href="#">ﾑ丂んｱﾑズ<span></span></a></div>
@@ -58,7 +57,7 @@
                     <img src="images/profile-1.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm 𝓐𝓼𝓱𝓹𝓪𝓴 and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm Ashpak and I'm a <span class="typing-2"></span></div>
                     <p>Strong in design and integration with intuitive problem-solving skills. Proficient in JAVA, C#, PYTHON, JAVASCRIPT, and SQL. Passionate about implementing and launching new projects. Ability to translate business requirements into technical solutions. Looking to start the career as an entry-level software engineer with a reputed firm driven by technology..</p>
                     <a href="https://drive.google.com/file/d/1A-9yKj9mEF1UNckNmIZbSiRQZVNVN2SJ/view?usp=drivesdk">Download CV</a>
                 </div>
@@ -184,18 +183,19 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                   <!--JQuery-->  
-<script type="text/javascript" src="jquery-3.3.1.min.js"></script>  
-<!--Floating WhatsApp css-->  
-<link rel="stylesheet" href="floating-wpp.min.css">  
-<!--Floating WhatsApp javascript-->  
-<script type="text/javascript" src="floating-wpp.min.js"></script>
+                    <!--Jquery-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<!--Floating WhatsApp css-->
+<link rel="stylesheet" href="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.css">
+<!--Floating WhatsApp javascript-->
+<script type="text/javascript" src="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.js"></script>
 
- <body>
+
+
+<body>
 <!--Div where the WhatsApp will be rendered-->
   <div id="WAButton"></div>
 </body>
-                
                 </div>
             </div>
         </div>
@@ -203,7 +203,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="http://www.therealmahi.cf/"> ♛ⓐ丂ᕼᵖᵃⓀ♕</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>Created By <a href="http://www.therealmahi.cf/">♛ⓐ丂ᕼᵖᵃⓀ♕</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
