--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Ashpak Shaikh</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="https://bit.ly/3olZc9w">Hire me</a>
+                <a href="https://chatwith.io/s/mahii">Hire me</a>
             </div>
           </div>
       </div>
