--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="column right">
                     <div class="text">I'm Ashpak and I'm a <span class="typing-2"></span></div>
                     <p>Strong in design and integration with intuitive problem-solving skills. Proficient in JAVA, C#, PYTHON, JAVASCRIPT, and SQL. Passionate about implementing and launching new projects. Ability to translate business requirements into technical solutions. Looking to start the career as an entry-level software engineer with a reputed firm driven by technology..</p>
-                    <a href="https://drive.google.com/file/d/1A-9yKj9mEF1UNckNmIZbSiRQZVNVN2SJ/view?usp=drivesdk">Download CV</a>
+                    <a href="https://bit.ly/3olZc9w">Download CV</a>
                 </div>
             </div>
         </div>
